<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ENDE Classic</string>
    <string name="hello_world">oops !</string>
    <string name="action_settings">Settings</string>
    <string name="intro">ENcrypter-DEcrypter</string>
    <string name="caesar">Caesar Cipher</string>
    <string name="title_activity_caesar"> Caesar Cipher </string>
    <string name="info">Type your text and press encrypt/decrypt to get the result</string>
    <string name="key">key :</string>
    <string name="encrypt">ENcrypt</string>
    <string name="decrypt">DEcrypt</string>
    <string name="or">OR</string>
    <string name="title_activity_c_crypted">ENcrypted</string>
    <string name="title_activity_c_decrypted">DEcrypted</string>
    <string name="txt">text :</string>
    <string name="vigenere">Vigenere Cipher</string>
    <string name="title_activity_vigenere">Vigenere Cipher</string>
    <string name="title_activity_v_act">Vigenere Cipher</string>
    <string name="vig_auto">Vigenere AutoKey</string>
    <string name="description">Information about the app</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_vig_auto">Vigenere AutoKey</string>
    <string name="title_activity_v_auto_act">Vigenere AutoKey</string>
    <string name="atbash">Atbash Cipher</string>
    <string name="title_activity_atbash">Atbash</string>
    <string name="title_activity_atbash_act">Converted Output</string>
    <string name="process">process</string>
    <string name="help">About</string>

</resources>
