<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="deshant.ende.Caesar$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/info"
        android:textSize="18sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="text|textAutoComplete" />
    <requestFocus />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/message"
        android:layout_marginTop="42dp"
        android:text="@string/key"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/message"
        android:ems="10"
        android:inputType="number" >

    </EditText>

    <Button
        android:id="@+id/encrypter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/decrypter"
        android:layout_alignBottom="@+id/decrypter"
        android:layout_alignRight="@+id/key"
        android:onClick="encrypt"
        android:text="@string/encrypt"
        style="@style/btnStyleOrange" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/decrypter"
        android:layout_alignBottom="@+id/decrypter"
        android:layout_centerHorizontal="true"
        android:text="@string/or"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/decrypter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/key"
        android:layout_below="@+id/key"
        android:layout_marginTop="70dp"
        android:onClick="decrypt"
        android:text="@string/decrypt"
        style="@style/btnStyleSeagull" />

</RelativeLayout>
